# dictpopup

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  MakefileOLD  README.md  TODO  TODO.txt  anki.c  anki.h  ankiconnect.h  ankiconnectc.c  ankiconnectc.h  config.def.h  config.h  config.ini  config.mk  db_writer.c  db_writer.h  deinflector.c  deinflector.h  dictionary.c  dictionary.h  dictionarylookup.c  dictionarylookup.h  dictpopup  dictpopup-create.1  dictpopup.1  dictpopup_create.c  format_output.c  install.sh  kanaconv.c  kanaconv.h  main.c  popup  popup.c  popup.h  (+13 more)
.github/workflows/: c-cpp.yml  ci.yml  linux_build.yml
cmake/: FindLMDB.cmake  FindMECAB.cmake
include/: ajt_audio_index_parser.h  anki.h  ankiconnectc.h  buf.h  database.h  db.h  dbreader.h  dbwriter.h  deinflector.h  dictionary_lookup.h  dictlookup.h  dictpopup.h  dictpopup_create.h  gtk3popup.h  jppron.h  messages.h  pdjson.h  platformdep.h  popup.h  settings.h  util.h  xlib.h  yomichan_parser.h
include/ankiconnectc/: send_request.h
include/deinflector/: deinflection_rules.h  kata2hira.h
include/dictpopup_create/: objects.h
include/jppron/: ajt_audio_index_parser.h  database.h  jppron.h  jppron_database.h  jppron_objects.h
include/objects/: color.h  dict.h  freqentry.h
include/platformdep/: audio.h  clipboard.h  file_operations.h  file_paths.h  notifications.h  windowtitle.h
include/utils/: buf.h  dp_profile.h  messages.h  str.h  utf8.h  util.h
man/: dictpopup.1
man1/: dictpopup-create.1  dictpopup.1
old_files/: dictionarylookupCDB.c
po/: LINGUAS  POTFILES.in  ja.po
src/: anki.c  ankiconnectc.c  cli.c  client.c  database.c  db.c  dbreader.c  dbwriter.c  deinflector.c  dictionary_lookup.c  dictlookup.c  dictpopup.c  dictpopup_create.c  gtk3popup.c  jppron.c  main.c  pdjson.c  platformdep.c  popup.c  settings.c  test.c  tests.c  unishox2.c  util.c  xlib.c  yomichan_parser.c
src/ankiconnectc/: ankiconnectc.c  send_request.c
src/deinflector/: deinflection_rules.gperf  deinflector.c  kata2hira.c
src/dictpopup_create/: dictpopup_create.c  yomichan_parser.c
src/frontends/: cli.c  gtk3popup.c  gtk3window.c  gtk4window.c
src/frontends/gtk3popup/: callbacks.c  callbacks.h  com.github.Ajatt-Tools.dictpopup.gschema.xml  dict_state_manager.c  dict_state_manager.h  dictpopup-application.c  dictpopup-application.h  dictpopup-config_main.c  dictpopup.gresource.xml  dp-preferences-window.c  dp-preferences-window.h  dp-preferences-window.ui  dp-settings.c  dp-settings.h  dp_page_manager.c  dp_page_manager.h  main-window.ui  main.c  settings-window.ui  style.css  ui_manager.c  ui_manager.h
src/jppron/: ajt_audio_index_parser.c  database.c  jppron.c  jppron_database.c  jppron_objects.c
src/objects/: dict.c  freqentry.c
src/platformdep/: audio.c  clipboard.c  file_operations.c  notifications.c  windowtitle.c
src/utils/: dp_profile.c  str.c  utf8.c  util.c  yyjson.c
tests/: ajt_audio_index_parser_tests.c  anki_card_preparation_tests.c  ankiconnect_tests.c  db_mock.c  deinflector_tests.c  dictpopup_tests.c  dp_application_tests.c  full_cycle_test.sh  main.c  parser_tests.c  test.sh  yomichan_parser_tests.c
tests/files/audio_indices/: audio_index_1
tests/files/dictionary_entries/: 10_entry  10_expected  1_expected  3_entry  3_expected  5_entry  6_entry  6_expected  7_entry  7_expected  9_entry  9_expected
tests/files/testdictionary/: expected_cli_output.txt  index.json  meta.txt  term_bank_1.json
tests/files/testentries/: 1_entry  2_entry  2_expected  3_expected  4_entry  4_expected  5_expected  6_expected
tests/jppron_tests/: ajt_audio_index_parser_tests.c  jppron_tests.c
tests/utils_tests/: enclose_word_in_string_tests.c
